--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Two Ways Data Binding</string>
+    <string name="app_name">Data-Binding</string>
 </resources>
